tests/gold/errors/invalid_use.comp
[[1;31mERROR[0m]: src/errors/print.3.3 doesn't exist.
Compilation failed!
